# projectsmigrator

./: CHANGELOG.md  LICENSE  README.md  projectsmigrator.py  pyproject.toml  requirements-dev.txt  requirements.txt
