[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projectsmigrator"
version = "0.0.1"
description = "Migrates one or more ZenHub workspaces to a Github Project"
authors = [
  { name = "Dylan Jay", email = "software@pretagov.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
  "github",
  "project management",
  "zenhub",
  "migration",
  "sync",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
  "requests>2",
  "gql",
  "aiohttp",
  "docopt",
]

[project.urls]
"Homepage" = "https://github.com/pretagov/projectsmigrator"
"Bug Tracker" = "https://github.com/pretagov/projectsmigrator/issues"
changelog = "https://github.com/pretagov/projectsmigrator/blob/master/CHANGELOG.md"

[project.scripts]
projectsmigrator = "projectsmigrator:main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
